# mandelbrot-hurst

./: .gitignore  README.md  mandelbrot-hurst.cabal
app/: Main.hs
resources/: 2017.csv  2018.csv  test.csv
src/: MHCharts.hs  MHConstructors.hs  MHDataTypes.hs  MHLib.hs  Statistics.hs
