name:           mandelbrot-hurst
version:        0.1.0.0
description:    A implementation of Hurst Exponent aka (R/S analysis)
author:         J. Eduardo V. Morango
maintainer:     jevmor@gmail.com
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:     MHLib
                     , MHDataTypes
                     , MHCharts
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , time
                      , vector
                      , text
                      , cassava
                      , random
                      , Chart
                      , Chart-cairo
                      , QuickCheck
                      , hspec
  hs-source-dirs:       src
  default-language:     Haskell2010


executable mh
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , text
                     , bytestring
                     , time
                     , vector
                     , random
                     , mandelbrot-hurst
                     , Chart
                     , Chart-cairo
test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , mandelbrot-hurst
                     , bytestring
                     , text
                     , time
                     , vector
                     , cassava
                     , QuickCheck
                     , hspec
                     , random
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
